--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,10 +37,12 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
           path: ./dist
 
   deploy:
